styles.css
* {
  box-sizing: border-box;
}

body {
  display: grid;
  margin: 0px;
  grid-template-areas:
    "sidebar form"
    "sidebar cards";
  grid-template-columns: 300px 1fr;
  grid-template-rows: 450px 100%;
  font-family: 'Open Sans';
}

h1 {
  color: white;
  margin: 25px;
}

img {
  height: 40px;
  width: 40px;
}

button {
  cursor: pointer;
}

label,
.nav-paragraph {
  font-weight: bold;
}

/* NAV */
.nav {
  background-color: #1F1F3D;
  grid-area: sidebar;
  color: white;
  z-index: 10;
}

.nav-section {
  border-top: #353567 2px solid;
  border-bottom: #353567 2px solid;
  padding: 25px;
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
}

.hidden-section {
  z-index: 5;
}

.hide {
  filter: brightness(35%);
  pointer-events: none;
}

.nav-button-open {
  visibility: hidden;
  position: absolute;
  left: 10px;
  top: 10px;
  background: #1F1F3D;
  border: none;
  height: 60px;
  width: 60px;
  background-image: url("assets/menu.svg");
  background-repeat: no-repeat;
  background-position: center;
}

.nav-button-close {
  background-image: url("assets/menu-close.svg");
}

#menu,
#menu-close {
  height: 60px;
  width: 60px;
}

.nav-paragraph {
  color: #E9E9F3;
  font-size: 20px;
  margin-bottom: 25px;
  margin-top: 0;
}

.nav-button-starbutton {
  color: white;
  background-color: #5356A4;
  border: #353567 2px solid;
  padding: 10px 0;
  font-size: 24px;
  border-radius: 3px;
}

/* FORM */
.div-form {
  background-color: #A9AAD2;
  grid-area: form;
  display: flex;
  align-items: center;
  justify-content: space-around;
  flex-direction: column;
  border-left: white 2px solid;
}

.form-input-title {
  width: 400px;
  font-size: 25px;
  padding: 5px;
  margin: 0 auto 20px;
  border: #5356A4 2px solid;
  border-radius: 3px;
  height: 50px;
}

.idea-title-label,
.idea-body-label {
  margin: 5px auto;
  width: 400px;
  color: #1F1F3D;
}

.form-textarea-body {
  font-size: 25px;
  width: 400px;
  height: 100px;
  padding: 5px;
  margin: 0 auto 15px;
  border: #5356A4 2px solid;
  border-radius: 3px;
  resize: none;
}

.form-button-save {
  width: 400px;
  margin: 15px auto;
  font-size: 20px;
  padding: 8px 0;
  color: #E9E9F3;
  background-color: #1F1F3D;
  border: #5356A4 2px solid;
  border-radius: 3px;
  height: 50px;
}

.form-button-save:disabled {
  opacity: 0.50;
  cursor: default;
}

.form-div {
  width: 400px;
  margin: 10px auto;
  height: 50px;
  padding: 0;
  display: flex;
  align-items: center;
  border: #5356A4 2px solid;
  background-color: white;
  border-radius: 3px;
}

.form-input-search {
  font-size: 16px;
  height: 100%;
  width: 100%;
  border: none;
  margin: 5px;
}

#search {
  height: 25px;
  width: 25px;
}

.form-button-search {
  height: 100%;
  width: 50px;
  background-color: #1F1F3D;
  border: none;
}

.form {
  display: flex;
  flex-flow: column;
  width: 100%;
  margin: 20px 0;
}


/* CARDS */
.section-cards {
  background-color: #EAEAF4;
  height: 100%;
  grid-area: cards;
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start;
  overflow: scroll;
}

.card {
  height: 350px;
  width: 350px;
  border: 1px solid #1F1F3D;
  display: flex;
  flex-direction: column;
  margin: 20px 15px 0px 15px;
}

.card-header {
  background-color: #1F1F3D;
  display: flex;
  justify-content: space-between;
  height: 40px;
}

.card-header button, .card-footer button {
  background-color: transparent;
  border: none;
}

.card-body {
  background-color: #FFFFFF;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  margin: 0px;
  height: 100%;
  padding: 0% 5% 0% 5%;
  font-size: 1.5em;
}

.card-body * {
  margin: 0px;
}

.card-footer {
  background-color: #3536A4;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  font-size: 1.5em;
  height: 40px;
  color: #FFFFFF;
}

@media screen and (max-width: 979px) {
  .card {
    max-width: 400px;
    min-width: 399px;
  }

  .section-cards {
    justify-content: center;
  }
}

@media screen and (max-width: 730px) {
  body {
    grid-template-areas:
    "nav"
    "form"
    "cards";
    grid-template-columns: 1fr;
    grid-template-rows: auto 450px auto;
  }

  .nav-button-open {
    visibility: visible;
  }

  h1 {
    text-align: center;
  }

  .nav {
    grid-area: nav;
  }

  .div-form {
    border-left: none;
  }

  .nav-paragraph {
    width: 400px;
    margin-left: auto;
    margin-right: auto;
  }

  .nav-section {
    display: none;
    height: 160px;
    position: absolute;
    width: 100%;
    background-color: #1F1F3D;
    border-top: none;
  }

  .show {
    display: flex;
  }

  .nav-button-starbutton {
    width: 400px;
    margin: 0 auto;
  }
}

@media screen and (max-width: 425px) {

  .nav-paragraph {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }

  .nav-button-starbutton {
    width: 100%;
    margin: 0 auto;
  }

  .form-input-title {
    width: 95%;
    margin: 0 auto 20px;
  }

  .idea-title-label,
  .idea-body-label {
    width: 95%;
    margin: 5px auto;
  }

  .form-textarea-body {
    width: 95%;
    margin: 0 auto 20px;
  }

  .form-button-save {
    width: 95%;
    margin: 20px auto;
  }

  .form-div {
    width: 95%;
    margin: 10px auto;
  }

  .card {
    min-width: 80%;
    max-width: 95%;
    margin: 20px auto;
  }
}

